--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -1,18 +1,33 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2? family= Comme & family= Inter:wght@500;800 & family= Raleway:wght@500 & display=swap');
 :root{
     --padding-container: 100px 0;
     --color-title: #530000;
-    --background: #fae7e7;
-
+    --background: #ffe187cd;
+    --icono:#ec0b0b;
 }
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Comme', sans-serif;
     background:var(--background) ;
 }
+::-webkit-scrollbar{
+    display: none;
+}
+/* ::-webkit-scrollbar-track{
+    border: 7px solid var(--background);
+    box-shadow: 0 0 5px 5px rgba(255, 125, 25, 0.5) inset; 
+}
+::-webkit-scrollbar-thumb{
+    border-radius: 3px;
+    background: linear-gradient(
+        45deg,
+        #f4ba0b,
+        #77ff00
+    );
+} */
 /*Editamos al contenedor Global, que es el que mantendra a todo a una sola medida*/
 .container {
-    width: 90%;
-    max-width: 1200px;
+    width: 96%;
+    max-width: 100%;
     margin: 0 auto;
     overflow: hidden;
     padding: var(--padding-container);
@@ -35,7 +50,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(180deg, #0000003c 0%, #0000004a 100%), url('../IMG/FONDOBIENVENIDA.jpg');
+    background-image: linear-gradient(180deg, #0000003c 0%, #0000004a 100%), url('../IMG/gira.jpg');
     background-size: cover;
     clip-path: polygon(0 0, 100% 0, 100% 70%, 100% 95%, 0 80%);
     z-index: -1;
@@ -48,7 +63,7 @@ body {
     align-items: center;
 }
 .nav__title {
-    font-weight: 300;
+    font-weight: bold;
     font-size: 40px;
 }
 .nav__links {
@@ -65,6 +80,9 @@ body {
 .nav__links {
     color: #fff;
     text-decoration: none;
+}
+.nav__links:hover{
+    color: #530000;
 }
 .nav__menu {
     margin-left: auto;
@@ -94,6 +112,8 @@ body {
 }
 .secciontop__paragraph {
     margin-bottom: 20px;
+    margin-top: 40px;
+    margin-left: 50px;
 }
 /*EL POR QUE ES ELLA ESPECIA, ESA SECCION*/
 .about {
@@ -127,4 +147,23 @@ body {
 .about__icon {
     width: 40px;
 }
-
+/*Seccion de doble caja, Frases con Imagenes IZQUIERDA-DERECHA*/
+#Caja-Compartida{
+    display: flex;
+    padding: var(--padding-container);
+}
+.left_section{
+    background: #530000;
+    height: 100vh;
+    width: 50%;
+}
+.right-section{
+    background-image: linear-gradient(180deg, #0000003c 0%, #0000004a 100%), url('../IMG/gira.jpg');
+    background-size: cover;
+    background-position: center;
+    width: 50%;
+    height: 100vh;
+}
+.TE-AMO{
+    color: #ec0b0b;
+}
